generified a bit more.